# UDPServer

./: .gitignore  CMakeLists.sublime-workspace  CMakeLists.txt  test.cpp  udpclient.cpp  udpclient.h  udpclientest.cpp  udpserver.cpp  udpserver.h  udpservertest.cpp
3rd/include/: networkinterfacesutil.h
doc/: UDPServer.xmind
